<resources>
    <string name="app_name">Mixxer</string>
    <string name="logIn">Log In</string>
    <string name="signUp">Sign Up</string>
    <string name="site_logo">Site logo</string>
    <string name="welcome">Welcome</string>
    <string name="welcome_to_the_mixxer">Welcome to the Mixxer!</string>
    <string name="site_header">Site header</string>
    <string name="connect_with_learners">Connect with learners</string>
    <string name="connect_with_language_learners_around_the_world_and_find_a_language_partner_today">Connect with language learners around the world and find a language partner today!</string>
    <string name="main_image">main image</string>
    <string name="login_screen_picture">Login screen picture</string>
    <string name="speak_and_learn">speak and learn</string>
    <string name="italian_german">italian german</string>
    <string name="no_matter">No matter what language you speak, find a partner here!</string>
    <string name="sticky_notes">sticky notes</string>
    <string name="the_mixxer">The Mixxer</string>
    <string name="welcome_login">Welcome!</string>
    <string name="msg_token_fmt">Sample Format</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="settings_button">settings button</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="edit_profile">Edit profile</string>
    <string name="about">About</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="copyright">© 2019 Mixxer Language Exchange</string>
    <string name="faq">FAQ</string>
    <string name="back_arrow">back arrow</string>
    <string name="log_out">Log out</string>
</resources>

