<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="4dp"
        android:adjustViewBounds="false"
        android:background="@android:drawable/list_selector_background"
        android:contentDescription="@string/back_arrow"
        android:cropToPadding="false"
        android:tint="@color/mixxerGray"
        app:layout_constraintEnd_toStartOf="@+id/settings"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_arrow_mixxer_gray" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/settings"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick="launchLogIn"
        android:text="@string/edit_profile"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick="launchAbout"
        android:text="@string/about"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_profile" />

    <Button
        android:id="@+id/privacy_policy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick="launchPrivacyPolicy"
        android:text="@string/privacy_policy"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <Button
        android:id="@+id/faq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick="launchFAQ"
        android:text="@string/faq"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/privacy_policy" />

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="24dp"
        android:background="@android:drawable/list_selector_background"
        android:onClick="launchLogIn"
        android:text="@string/log_out"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/mixxerGray"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq" />

    <TextView
        android:id="@+id/copyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/copyright"
        android:textColor="@color/browser_actions_title_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>